Bugfixes of broken info on brushes and painting an object over the same object removing it. Added exporting the room to screeps.com simulation.

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -82,7 +82,7 @@ textarea.form-control {
     max-height: 400px;
     padding: 2px 5px;
 
-    &#json-data {
+    &#json-data, &#sim-script {
         font-family: monospace;
         font-size: 1rem;
         min-height: 320px;
